<resources>
    <string name="app_name" translatable="false">SweetClash</string>
    <string name="start_page_title">We Help You Download Your Favorite Videos Here!</string>
    <string name="view">View</string>
    <string name="play">Play</string>
    <string name="start">Start</string>
    <string name="dialog_download_suc">Downloaded Successfully</string>
    <string name="ad_loading">Ad loading…</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="my_favorite">My Favorite</string>
    <string name="favorite">Favorite</string>
    <string name="videos">Videos</string>
    <string name="local_videos">Local Videos</string>
    <string name="settings">Settings</string>
    <string name="retry">Try Again</string>
    <string name="parse_fail">Failed to parse the video, please try again</string>
    <string name="downloading_empty_content">No downloads yet? Give our downloader a try!</string>
    <string name="video_empty_content">No videos downloaded locally</string>
    <string name="how_to_use">How To Use?</string>
    <string name="language">Language</string>
    <string name="about">About</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="video_analysis">Video Analysis</string>
    <string name="notify_des">Your video is ready! Turn on notifications for instant download alerts and new feature updates.</string>
    <string name="allow">Allow</string>
    <string name="cancel">Cancel</string>
    <string name="notifications">Notifications</string>
    <string name="delete">Delete</string>
    <string name="del_downloading_content">Are you sure to delete download the video, delete cannot recover after oh</string>
    <string name="del_downloaded_content">Are you sure to delete Locally video, delete cannot recover after oh</string>
    <string name="share">Share</string>
    <string name="url_error">Please copy the video link from X first,then come back to this page!</string>
    <string name="recommended">Recommended</string>
    <string name="recommend_videos">Videos</string>
    <string name="pause">Paused</string>
    <string name="watch">Watch</string>
    <string name="next_step">Next step</string>
</resources>