<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:background="@drawable/shape_dialog_download_suc_bg"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:src="@mipmap/img_delete_tips_icon"/>


        <TextView
            android:id="@+id/delete_tips_page_desc_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="18dp"
            android:text="@string/del_downloading_content"
            android:textSize="18sp"
            android:textColor="#212121"
            android:gravity="center"
            android:fontFamily="@font/roboto"/>


        <LinearLayout
            android:id="@+id/delete_tips_page_delete_action"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="45dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/shape_native_ad_big_btn_bg"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </LinearLayout>


        <TextView
            android:id="@+id/delete_tips_page_no_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/roboto"
            android:text="@string/cancel"
            android:textColor="#333333"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </LinearLayout>

</FrameLayout>