<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/transparent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:background="@drawable/shape_dialog_download_suc_bg"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:text="@string/settings"
            android:textSize="20sp"
            android:textColor="#333333"
            android:textStyle="bold"
            android:fontFamily="@font/roboto"/>

        
        <LinearLayout
            android:id="@+id/settings_page_language_ll"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginHorizontal="24dp"
            android:paddingHorizontal="16dp"
            android:background="@drawable/shape_dialog_settings_item_bg"
            android:gravity="center_vertical">
            
            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@mipmap/img_dialog_settings_language"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/language"
                android:textSize="16sp"
                android:textColor="#333333"
                android:fontFamily="@font/roboto"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>


            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@mipmap/img_dialog_settings_emd"/>

        </LinearLayout>
        
        <Space
            android:layout_width="wrap_content"
            android:layout_height="16dp"/>

        <LinearLayout
            android:id="@+id/settings_page_guide_ll"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginHorizontal="24dp"
            android:paddingHorizontal="16dp"
            android:background="@drawable/shape_dialog_settings_item_bg"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@mipmap/img_dialog_settings_guide"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/how_to_use"
                android:textSize="16sp"
                android:textColor="#333333"
                android:fontFamily="@font/roboto"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>


            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@mipmap/img_dialog_settings_emd"/>

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="16dp"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginHorizontal="24dp"
            android:paddingHorizontal="16dp"
            android:background="@drawable/shape_dialog_settings_item_bg"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@mipmap/img_dialog_settings_about"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/about"
                android:textSize="16sp"
                android:textColor="#333333"
                android:fontFamily="@font/roboto"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>


            <TextView
                android:id="@+id/tv_app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="V1.2.3"
                android:textSize="14sp"
                android:textStyle="bold"
                android:fontFamily="@font/roboto"
                android:textColor="#EF7E06"
                />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="16dp"/>


    </LinearLayout>

</FrameLayout>