<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="148dp"
    android:orientation="vertical"
    android:background="@mipmap/img_item_video_bg"
    android:layout_marginBottom="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp">

        <androidx.cardview.widget.CardView
            android:layout_width="83dp"
            android:layout_height="80dp"
            app:cardCornerRadius="13dp"
            app:cardBackgroundColor="@android:color/transparent">

            <ImageView
                android:id="@+id/iv_local_video_cover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"/>


        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="12dp"
            android:layout_height="0dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="NestedWeights"
            android:layout_marginTop="13dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_local_video_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="VIDEO TITLE"
                    android:textColor="#333333"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textStyle="bold"/>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="0dp"/>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/shape_native_ad_big_btn_bg"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="5dp"
                    android:gravity="center">
                    
                    
                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:src="@mipmap/img_item_video_watch"/>

                    <Space
                        android:layout_width="4dp"
                        android:layout_height="0dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/watch"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:fontFamily="@font/roboto"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:textStyle="bold"/>

                </LinearLayout>




            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="6dp" />

            <TextView
                android:id="@+id/tv_local_video_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="DescriptionVideoVideosDescriptionVideoVideosDescription"
                android:textColor="#555555"
                android:textSize="12sp"
                android:fontFamily="@font/roboto"
                android:maxLines="2"
                android:ellipsize="end"/>




        </LinearLayout>






    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_local_video_add_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite"
            android:textColor="#333333"
            android:textSize="12sp"
            android:gravity="center"
            android:drawablePadding="5dp"
            app:drawableStartCompat="@mipmap/img_item_video_like" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_local_video_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textColor="#333333"
            android:textSize="12sp"
            android:gravity="center"
            android:drawablePadding="5dp"
            app:drawableStartCompat="@mipmap/img_item_video_share" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_local_video_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="#AE0000"
            android:textSize="12sp"
            android:gravity="center"
            android:drawablePadding="5dp"
            app:drawableStartCompat="@mipmap/img_item_downloading_page_close" />




    </LinearLayout>




</LinearLayout>