<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/main"
    android:background="@mipmap/img_home_page_bg">

    <include
        android:id="@+id/head_page"
        layout="@layout/ns_head_page" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/video_parse_page_ll_video_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="18dp">

                    <ImageView
                        android:id="@+id/video_parse_page_video_image"
                        android:layout_width="180dp"
                        android:layout_height="300dp"
                        android:layout_gravity="center"
                        android:layout_marginVertical="2dp"
                        android:scaleType="centerCrop" />

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:src="@mipmap/img_video_parse_page_play" />


                </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:id="@+id/video_parse_page_download_action"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginHorizontal="115dp"
                    android:layout_marginVertical="20dp"
                    android:background="@drawable/shape_native_ad_big_btn_bg"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="@string/download"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"/>


                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/video_parse_page_ll_video_filed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="88dp"
                    android:layout_height="88dp"
                    android:layout_marginTop="65dp"
                    android:src="@mipmap/img_video_parse_page_failed_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="68dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="68dp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/parse_fail"
                    android:textColor="#A6A6A6"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/video_parse_page_retry_action"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginHorizontal="115dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/shape_native_ad_big_btn_bg"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/retry"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="UseCompatTextViewDrawableXml" />


            </LinearLayout>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/video_parse_page_analysis_loading"
                android:visibility="gone"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginVertical="100dp"
                android:layout_gravity="center"
                app:lottie_autoPlay="true"
                app:lottie_fileName="video_parse_page_loading.json"
                app:lottie_loop="true" />

        </FrameLayout>

    </ScrollView>


    <com.ping.night.story.admob.view.CustomNativeAdView
        android:id="@+id/video_parse_page_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</LinearLayout>